validate user register + update endpoints in swagger
